--- a/css/imgbg_4376.css
+++ b/css/imgbg_4376.css
@@ -8,7 +8,7 @@
 
 	/*background-image:url(../images/land.jpg);*/
 
-	pankajpanga
+	background-image:url(../images/4376land.jpg);
 
 	background-repeat:no-repeat;
 
@@ -28,7 +28,7 @@
 
 	/*background-image:url(../images/port.jpg);*/
 
-	pangapankaj
+	background-image:url(../images/4376port.jpg);
 
 	background-repeat:no-repeat;
 
